feat: support existing Play 3.0 applications on Java 11